add redux features

--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -61,3 +61,8 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   background-color: red;
   color: white;
 }
+
+.assignment-table td {
+  padding-left: 5px; 
+  vertical-align: top;
+}
