--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -66,3 +66,24 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   padding-left: 5px; 
   vertical-align: top;
 }
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
