--- a/src/Kanbas/Courses/Quizzes/QuizEditor/questionEditor.css
+++ b/src/Kanbas/Courses/Quizzes/QuizEditor/questionEditor.css
@@ -5,7 +5,6 @@
 .answer-selection-container{
     display: flex;
     flex-direction: row;
-    
-    align-items: center;
+    /* align-items: center; */
     margin-bottom: 1rem;
 }
