--- a/src/Kanbas/Courses/Quizzes/QuizDetails/Quiz.css
+++ b/src/Kanbas/Courses/Quizzes/QuizDetails/Quiz.css
@@ -125,4 +125,70 @@
 	font-weight: bold;
 	border-bottom: 1px solid #ccc;
   }
+
+  /* Error shows */
+.error-modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+  }
+  
+  .error-modal-content {
+	background-color: #fff;
+	border-radius: 8px;
+	padding: 20px;
+	text-align: center;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	max-width: 400px;
+  }
+  
+  .error-modal-message {
+	font-size: 16px;
+	color: #333;
+	margin-bottom: 20px;
+  }
+  
+/* Quiz Header Styles */
+.quiz-header-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 20px;
+  }
+  
+  .quiz-header-title {
+	font-size: 30px;
+	font-weight: bold;
+	margin: 0;
+  }
+  
+  .quiz-header-container .quiz-header-view-attempt-btn {
+	color: #fff;
+	background-color: #b0b5b9;
+	padding: 8px 16px;
+	border-radius: 4px;
+	font-size: 18px;
+	font-weight: bold;
+	border: none;
+	cursor: pointer;
+	transition: background-color 0.3s ease, color 0.3s ease;
+	appearance: none;
+  }
+  
+  .quiz-header-container .quiz-header-view-attempt-btn:hover {
+	background-color: #5a6268;
+  }
+  
+  .quiz-header-container .quiz-header-view-attempt-btn:active {
+	background-color: #4e555b;
+  }
+  
+
   
